fix(reindex): default getRequiredReindexFields() to "*"; opt out only for DatabaseSchema
PR #27723's selective field probe per Index is the root cause of multiple
silent-drop regressions: testCaseResult / testCaseStatus, testSuite's
lastResultTimestamp, and others. Each gap costs a per-Index investigation
and a one-line fix.

Flip the default. SearchIndex.getRequiredReindexFields() now returns
Set.of("*") so reindex pulls every supported field for the entity --
the same hydration shape that existed before PR #27723. The fan-out
relationships that #27723 was actually designed to protect against
(DatabaseSchema.tables in particular) remain protected via a targeted
override: DatabaseSchemaIndex returns the common relationship set,
which excludes "tables".

ReindexingUtil.getSearchIndexFields short-circuits when the probe
surfaces "*" so Entity.getOnlySupportedFields doesn't strip the
wildcard as an unsupported field name. Per-Index overrides that
extend SearchIndex.super.getRequiredReindexFields() and add specific
fields continue to work -- the resulting set carries "*" and falls
into the short-circuit -- so no existing override has to change.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>